--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
+  <meta http-equiv="Refresh" content="0; url='Home.php" />
     <title>Redirect</title>
   </head>
 </html>
